// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders with brand styling 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #ECFCF9;
  border: 1px solid #00D9C5;
  border-radius: 12px;
  box-shadow: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > .sc-gsTCUz {
  -webkit-flex: 0 1  200px;
  -ms-flex: 0 1  200px;
  flex: 0 1  200px;
}

.c0 .sc-hKgILt {
  font-size: 16px;
}

.c0 .sc-eCssSg {
  font-size: 14px;
}

.c0 > .sc-jSgupP {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  class="c0"
/>
`;

exports[`<Card /> renders with horizontal layout 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #FFFFFF;
  border: 1px solid #EFEFEF;
  border-radius: 12px;
  box-shadow: 0 1px 0 0 #D4D7D9;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > .sc-gsTCUz {
  -webkit-flex: 0 1  200px;
  -ms-flex: 0 1  200px;
  flex: 0 1  200px;
}

.c0 .sc-hKgILt {
  font-size: 16px;
}

.c0 .sc-eCssSg {
  font-size: 14px;
}

.c0 > .sc-jSgupP {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  class="c0"
/>
`;

exports[`<Card /> renders with primary styling 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #FFFFFF;
  border: 1px solid #EFEFEF;
  border-radius: 12px;
  box-shadow: 0 1px 0 0 #D4D7D9;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > .sc-gsTCUz {
  -webkit-flex: 0 1  200px;
  -ms-flex: 0 1  200px;
  flex: 0 1  200px;
}

.c0 .sc-hKgILt {
  font-size: 18px;
}

.c0 .sc-eCssSg {
  font-size: 16px;
}

.c0 > .sc-jSgupP {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  class="c0"
/>
`;

exports[`<Card /> renders with secondary styling 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #FFFFFF;
  border: 1px solid #EFEFEF;
  border-radius: 12px;
  box-shadow: 0 1px 0 0 #D4D7D9;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > .sc-gsTCUz {
  -webkit-flex: 0 1  200px;
  -ms-flex: 0 1  200px;
  flex: 0 1  200px;
}

.c0 .sc-hKgILt {
  font-size: 16px;
}

.c0 .sc-eCssSg {
  font-size: 14px;
}

.c0 > .sc-jSgupP {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  class="c0"
/>
`;

exports[`<Card /> renders with vertical layout 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #FFFFFF;
  border: 1px solid #EFEFEF;
  border-radius: 12px;
  box-shadow: 0 1px 0 0 #D4D7D9;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > .sc-gsTCUz {
  -webkit-flex: 0 1  200px;
  -ms-flex: 0 1  200px;
  flex: 0 1  200px;
}

.c0 .sc-hKgILt {
  font-size: 16px;
}

.c0 .sc-eCssSg {
  font-size: 14px;
}

.c0 > .sc-jSgupP {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  class="c0"
/>
`;
